# EasonDrone_Msgs

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
action/: CheckForObjects.action
include/: AttitudeReference.h  BoundingBox.h  BoundingBoxes.h  Case2Result.h  Case3Result.h  CheckForObjectsAction.h  CheckForObjectsActionResult.h  CheckForObjectsResult.h  ControlCommand.h  ControlOutput.h  DetectionInfo.h  DroneState.h  Formation.h  IndoorSearch.h  LogMessage.h  LogMessageControl.h  LogMessageDetection.h  LogMessagePlanning.h  Message.h  Msg103.h  Msg104.h  MultiDetectionInfo.h  PositionReference.h  StationCommand.h  SwarmCommand.h  UgvCommand.h  UgvState.h
msg/: Case2Result.msg  Case3Result.msg  ControlCommand.msg  ControlOutput.msg  DroneState.msg  Formation.msg  IndoorSearch.msg  LogMessage.msg  LogMessageControl.msg  LogMessageDetection.msg  Message.msg  Msg103.msg  Msg104.msg  PositionReference.msg  StationCommand.msg  SwarmCommand.msg  UgvCommand.msg  UgvState.msg
