<?xml version="1.0"?>
<package format="2">
  <name>easondrone_msgs</name>
  <version>1.1.3</version>
  <description>
    The easondrone_msgs package
  </description>

  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>

  <license>Apache</license>

  <url type="repository">https://github.com/HuaYuXiao/EasonDrone_Msgs.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
